Change Permissions: - dcverify.user.code - dcverify.user.accept - dcverify.user.delete - dcverify.user.check - dcverify.user.*
Add Permissions:
- dcverify.admin.reload

Add Command:
/verify reload