@@ -8,38 +8,40 @@ import net.md_5.bungee.api.chat.TextComponent;
 import net.md_5.bungee.api.connection.ProxiedPlayer;
 import net.md_5.bungee.api.plugin.Command;
 import net.md_5.bungee.api.plugin.TabExecutor;
+
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
 
 public class Verify extends Command implements TabExecutor {
 
-    public static Sqlgetter data;
+    private final Sqlgetter data;
+
+    private final DcVerify plugin;
+
     public static HashMap<ProxiedPlayer, Boolean> confimcommand = new HashMap<>();
 
     public Verify(DcVerify plugin) {
         super("verify");
         this.data = new Sqlgetter(plugin);
+        this.plugin = plugin;
     }
 
-    public static String verifycodemessage(String message, String placeholderreplace)
-    {
-        message = DcVerify.config.getString(message).replaceAll("%verifycode%", placeholderreplace);
-        if (DcVerify.config.getBoolean("verify_prefix_use")) {
-            message = ChatColor.translateAlternateColorCodes('&',DcVerify.config.getString("verify_prefix") + " " +  message);
+    public String verifycodemessage(String message, String placeholderreplace) {
+        message = plugin.config.getString(message).replaceAll("%verifycode%", placeholderreplace);
+        if (plugin.config.getBoolean("verify_prefix_use")) {
+            message = ChatColor.translateAlternateColorCodes('&', plugin.config.getString("verify_prefix") + " " + message);
         } else {
             message = ChatColor.translateAlternateColorCodes('&', message);
         }
         return message;
     }
 
-    public static String verifydcnameemessage(String message, String placeholderreplace)
-    {
-        message = DcVerify.config.getString(message).replaceAll("%verifydcname%", placeholderreplace);
-        if (DcVerify.config.getBoolean("verify_prefix_use")) {
-            message = ChatColor.translateAlternateColorCodes('&', DcVerify.config.getString("verify_prefix") + " " + message);
+    public String verifydcnameemessage(String message, String placeholderreplace) {
+        message = plugin.config.getString(message).replaceAll("%verifydcname%", placeholderreplace);
+        if (plugin.config.getBoolean("verify_prefix_use")) {
+            message = ChatColor.translateAlternateColorCodes('&', plugin.config.getString("verify_prefix") + " " + message);
         } else {
             message = ChatColor.translateAlternateColorCodes('&', message);
         }
@@ -47,17 +49,17 @@ public class Verify extends Command implements TabExecutor {
 
     }
 
-    public static String message(String message) {
-        message = DcVerify.config.getString(message);
-        if (DcVerify.config.getBoolean("verify_prefix_use")) {
-            message = ChatColor.translateAlternateColorCodes('&', DcVerify.config.getString("verify_prefix") + " " + message);
+    public String message(String message) {
+        message = plugin.config.getString(message);
+        if (plugin.config.getBoolean("verify_prefix_use")) {
+            message = ChatColor.translateAlternateColorCodes('&', plugin.config.getString("verify_prefix") + " " + message);
         } else {
             message = ChatColor.translateAlternateColorCodes('&', message);
         }
         return message;
     }
 
-        @Override
+    @Override
     public void execute(CommandSender sender, String[] args) {
 
         if (!(sender instanceof ProxiedPlayer)) {
@@ -67,11 +69,11 @@ public class Verify extends Command implements TabExecutor {
 
         if (args.length == 0) {
 
-            if (sender.hasPermission("DCVerify.user.code") || sender.hasPermission("DCVerify.user.*")) {
+            if (sender.hasPermission("dcverify.user.code") || sender.hasPermission("dcverify.user.*")) {
 
                 String verifycode = data.selectverifycode(((ProxiedPlayer) sender).getUniqueId());
 
-                sender.sendMessage(new TextComponent(verifycodemessage("verify_code_message",verifycode)));
+                sender.sendMessage(new TextComponent(verifycodemessage("verify_code_message", verifycode)));
 
             } else {
                 sender.sendMessage(new TextComponent(message("verify_nopermissions")));
@@ -80,7 +82,7 @@ public class Verify extends Command implements TabExecutor {
         } else if (args.length == 1) {
             if (args[0].equalsIgnoreCase("check")) {
 
-                if (sender.hasPermission("DCVerify.user.check") || sender.hasPermission("DCVerify.user.*")) {
+                if (sender.hasPermission("dcverify.user.check") || sender.hasPermission("dcverify.user.*")) {
 
                     boolean verifycode = data.checkverify(((ProxiedPlayer) sender).getUniqueId());
                     if (!verifycode) {
@@ -94,9 +96,9 @@ public class Verify extends Command implements TabExecutor {
                     sender.sendMessage(new TextComponent(message("verify_nopermissions")));
                 }
 
-            } else if (args[0].equalsIgnoreCase("delete") ) {
+            } else if (args[0].equalsIgnoreCase("delete")) {
 
-                if (sender.hasPermission("DCVerify.user.delete") || sender.hasPermission("DCVerify.user.*")) {
+                if (sender.hasPermission("dcverify.user.delete") || sender.hasPermission("dcverify.user.*")) {
 
                     boolean verifycode = data.checkverify(((ProxiedPlayer) sender).getUniqueId());
                     if (!verifycode) {
@@ -113,14 +115,14 @@ public class Verify extends Command implements TabExecutor {
 
             } else if (args[0].equalsIgnoreCase("accept")) {
 
-                if (sender.hasPermission("DCVerify.user.accept") || sender.hasPermission("DCVerify.user.*")) {
+                if (sender.hasPermission("dcverify.user.accept") || sender.hasPermission("dcverify.user.*")) {
 
                     boolean verifycode = data.checkverify(((ProxiedPlayer) sender).getUniqueId());
                     String Verifydcname = data.selectverifydiscoruser(((ProxiedPlayer) sender).getUniqueId());
                     if (!verifycode && Verifydcname == null) {
                         sender.sendMessage(new TextComponent(message("verify_accept_noaccept")));
-                    } else if (verifycode && Verifydcname != null)  {
-                        sender.sendMessage(new TextComponent(verifydcnameemessage("verify_accept_existing",Verifydcname )));
+                    } else if (verifycode && Verifydcname != null) {
+                        sender.sendMessage(new TextComponent(verifydcnameemessage("verify_accept_existing", Verifydcname)));
                     } else {
 
                         if (confimcommand.get(sender) == null) {
@@ -136,9 +138,19 @@ public class Verify extends Command implements TabExecutor {
                 } else {
                     sender.sendMessage(new TextComponent(message("verify_nopermissions")));
                 }
-            }
+            } else if (args[0].equalsIgnoreCase("reload")) {
+                if (sender.hasPermission("dcverify.admin.reload")) {
+                    Boolean ruckgabe = plugin.reload();
 
-            else {
+                    if (ruckgabe) {
+                        sender.sendMessage(new TextComponent(message("verify_reload")));
+                    } else {
+                        sender.sendMessage(new TextComponent(message("verify_reload_error")));
+                    }
+                } else {
+                    sender.sendMessage(new TextComponent(message("verify_nopermissions")));
+                }
+            } else {
                 sender.sendMessage(new TextComponent(message("verify_help")));
             }
         } else {
@@ -149,8 +161,13 @@ public class Verify extends Command implements TabExecutor {
     @Override
     public Iterable<String> onTabComplete(CommandSender commandSender, String[] args) {
         if (args.length == 1) {
-                List<String> servers = new ArrayList<>(Arrays.asList("accept", "check", "delete"));
-                return servers;
+            List<String> servers;
+            if (commandSender.hasPermission("dcverify.admin.reload")) {
+                servers = List.of("accept", "check", "delete", "reload");
+            } else {
+                servers = List.of("accept", "check", "delete");
+            }
+            return servers;
         } else {
             return new ArrayList<>();
         }
